# footsy

./: Cargo.toml  README.md  resume.cfg
src/: main.rs
